--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <button class=" hamburger-button" aria-label="Toggle navigation">&#9776;</button>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="http://">Home</a></li>
-                    <li><a href="http://">Chamber</a></li>
-                    <li><a href="http://">GitHub</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Chamber</a></li>
+                    <li><a href="#">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/franco-chavez-548b0a56/">LinkedIn</a></li>
                 </ul>
             </nav>
