route to chamber added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Chamber</a></li>
+                    <li><a href="chamber/directory.html">Chamber</a></li>
                     <li><a href="#">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/franco-chavez-548b0a56/">LinkedIn</a></li>
                 </ul>
