modal added to main page w4

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> ```
     <link rel="stylesheet" href="styles/style.css">
-    <script src="scripts/home.js" defer></script>
+    
     <script src="scripts/getDate.js" defer></script>
+    <script type="module" src="scripts/home.js" defer></script>
 </head>
 
 <body>
@@ -59,12 +60,12 @@
             <button id="wdd">WDD</button>
         </div>
         <div class="course-grid">
-            <div class="course cse">CSE 110</div>
+            <!-- <div class="course cse">CSE 110</div>
             <div class="course wdd">WDD 130</div>
             <div class="course cse">CSE 111</div>
             <div class="course cse">CSE 210</div>
             <div class="course wdd">WDD 131</div>
-            <div class="course wdd">WDD 231</div>
+            <div class="course wdd">WDD 231</div> -->
         </div>
     </section>
     <footer>
