--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -18,6 +18,9 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> 
     <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/weather.js" defer></script>
+    <script src="scripts/randomCards.js"  defer></script>
+        
 </head>
 <body>
     <header class="header">
@@ -29,53 +32,17 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./directory.html">Directory</a></li>
-                <li><a href="./join.html">Join</a></li>
+                <li><a href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
                 <li><button id="darkModeToggle">🌑</button></li>
             </ul>
         </nav>
     </header>
-
-    <section class="hero">
-        <div class="hero-image">
-            <button class="hero-button">Keynote Tickets</button>
-        </div>
-    </section>
-
-    <main>
-        <section class="events">
-            <h2>Events</h2>
-            <div class="events-content"></div>
-        </section>
-
-        <section class="weather">
-            <div class="current-weather">
-                <h3>Current Weather</h3>
-                <p>75°F</p>
-                <p>Partly Cloudy</p>
-                <p>High: 85°F</p>
-                <p>Low: 52°F</p>
-                <p>Humidity: 34%</p>
-                <p>Sunrise: 7:30am</p>
-                <p>Sunset: 9:59pm</p>
-            </div>
-            <div class="forecast">
-                <h3>Weather Forecast</h3>
-                <p>Today: 90°F</p>
-                <p>Wednesday: 89°F</p>
-                <p>Thursday: 68°F</p>
-            </div>
-        </section>
-
-        <section class="business-directory">
-            <div class="view-toggle">
-                <button id="toggleViewButton">Toggle Grid/List View</button>
-            </div>
-            <button id="prevButton" class="carousel-button">⬅</button>
-            <div id="businessCarousel" class="carousel-container"></div>
-            <button id="nextButton" class="carousel-button">➡</button>
-        </section>
-    </main>
+    <h1>Thank You for Your Submission!</h1>
+    
+    <p>Here is the information you provided:</p>
+    <ul id="formDataList"></ul>
+   
 
     <footer class="footer">
         <p>La Calera Chamber of Commerce</p>
@@ -90,7 +57,7 @@
         <p>WDD231 Class Project - Franco Chávez</p>
         <p>Last modification: <span id="lastModified"></span></p>
     </footer>
-
+    <script src="scripts/thankyou.js"></script>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/script.js"></script>
 </body>
