--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -32,26 +32,27 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="./join.html">Join</a></li>
                 <li><a href="#">Discover</a></li>
                 <li><button id="darkModeToggle">🌑</button></li>
             </ul>
         </nav>
     </header>
+    <section class="thankyou">
     <h1>Thank You for Your Submission!</h1>
     
     <p>Here is the information you provided:</p>
     <ul id="formDataList"></ul>
    
-
+    </section>
     <footer class="footer">
         <p>La Calera Chamber of Commerce</p>
         <p>65 Av. San Martín, La Calera, Córdoba 5151</p>
         <p>Email: info@lacalera.org</p>
         <p>Phone: (223) 555-2300</p>   
         <div class="social-media">
-            <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
+            <a href="#"><img src="images/face.png" alt="Twitter"></a>
             <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
         </div>
         <p>WDD231 Class Project - Franco Chávez</p>
