--- a/chamber/index.html
+++ b/chamber/index.html
@@ -95,9 +95,9 @@
         <p>Email: info@lacalera.org</p>
         <p>Phone: (223) 555-2300</p>   
         <div class="social-media">
-            <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
+            <a href="#"><img src="images/face.png" alt="Twitter"></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
         </div>
         <p>WDD231 Class Project - Franco Chávez</p>
         <p>Last modification: <span id="lastModified"></span></p>
