thankyou.html changes

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -170,7 +170,7 @@
         <div class="social-media">
             <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
             <a href="#"><img src="images/face.png" alt="Facebook"></a>
-            <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
         </div>
         <p>WDD231 Class Project - Franco Chávez</p>
         <p>Last modification: <span id="lastModified"></span></p>
