--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <!-- <link rel="manifest" href="/site.webmanifest"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> 
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -30,7 +30,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./directory.html">Directory</a></li>
                 <li><a href="./join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="./discover.html">Discover</a></li>
                 <li><button id="darkModeToggle">🌑</button></li>
             </ul>
         </nav>
