--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -109,8 +109,8 @@
         <p>WDD231 Class Project - Franco Chávez</p>
         <p>Last modification: <span id="lastModified"></span></p>
     </footer>
-    <script src="scripts/discover.js"></script>
-    <script src="scripts/getDates.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/discover.js" defer></script>
+    <script src="scripts/getDates.js" defer></script>
+    <script src="scripts/script.js" defer></script>
 </body>
 </html>
