changes in links

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,9 +12,9 @@
     <meta property="og:description" content="The La Calera Chamber of Commerce helps local businesses thrive through events, networking, and resources." />
     <meta property="og:site_name" content="La Calera Chamber of Commerce" />
     <meta property="og:locale" content="en_US" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"> -->
     <!-- <link rel="manifest" href="/site.webmanifest"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> 
     <link rel="stylesheet" href="styles/style.css">
