changes in animation and repair links

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Calera Chamber of Commerce</title>
+    <meta name="description" content="Chamber Join Page">
+    <meta name="author" content="César Franco Chávez">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="La Calera Chamber of Commerce" />
     <meta property="og:type" content="website" />
@@ -12,10 +14,9 @@
     <meta property="og:description" content="The La Calera Chamber of Commerce helps local businesses thrive through events, networking, and resources." />
     <meta property="og:site_name" content="La Calera Chamber of Commerce" />
     <meta property="og:locale" content="en_US" />
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"> -->
-    <!-- <link rel="manifest" href="/site.webmanifest"> -->
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.ico"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> 
     <link rel="stylesheet" href="styles/style.css">
     <!-- <script src="scripts/weather.js" defer></script>
