--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> ```
     <link rel="stylesheet" href="styles/style.css">
     
-    <script src="scripts/getDate.js" defer></script>
-    <script type="module" src="scripts/home.js" defer></script>
+    <script src="scripts/getDate.js" defer></script>    
 </head>
 
 <body>
@@ -71,6 +70,7 @@
     <footer>
         <p>&copy; 2024 César Franco Chávez - La Calera</p>
         <p>Last modification: <span id="lastModified"></span></p>
+        <script type="module" src="scripts/home.js"></script>
     </footer>
 </body>
 
